Fixes: updated README, corrected overflowing text in schedule cells, updated title font sizes.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -136,6 +136,7 @@
   --text-color-secondary: #B36B8A;
 }
 
+/* 🌅 Solaris Theme Specification */
 [data-theme="solaris"] {
   /* Primary */
   --primary-color: #FF6F3C;
@@ -158,6 +159,7 @@
   --text-color-secondary: #7A5936;
 }
 
+/* 🌌 Nebula Theme Specification */
 [data-theme="nebula"] {
   /* Primary */
   --primary-color: #6B5B95;
@@ -180,7 +182,8 @@
   --text-color-secondary: #6E6888;
 }
 
-[data-theme="tropic"] {
+/* 🌴 Tropical Theme Specification */
+[data-theme="tropical"] {
   /* Primary */
   --primary-color: #009973;
   --primary-color-tint: #33B399;
@@ -202,16 +205,11 @@
   --text-color-secondary: #338573;
 }
 
-
 html {
   font-size: 62.5%; /* 1rem === 10px */
 }
 
 :root {
-  /* Base colors */
-  --white: #FFFFFF;
-  --black: #000000;
-
   /* Component colors */
   --schedule-day-cell-font-color: var(--text-color);
   --schedule-hour-cell-font-color: var(--text-color-secondary);
@@ -232,14 +230,10 @@ html {
   --font-size-h4: 1.8rem;    
   --font-size-h5: 1.5rem;    
 
-  /* Elementos */
+  /* Components */
   --font-size-btn: 1.7rem;    
   --font-size-p: 1.6rem;      
   --font-size-small: 1.3rem;  
-
-  /* Line heights */
-  --line-height-heading: 1.2;
-  --line-height-body: 1.5;
 
   /* Font weights */
   --font-weight-regular: 400;
@@ -263,11 +257,6 @@ html {
   --btn-padding-y: var(--space-xs);
   --btn-border-radius: 0.6rem;
 
-  /* Inputs */
-  --input-height: 4rem;
-  --input-padding-x: 1.2rem;
-  --input-border-radius: 0.4rem;
-
   /* Layout */
   --container-max-width: 120rem;
   --container-padding-x: var(--space-md);
@@ -276,11 +265,7 @@ html {
   --box-border-radius-softened: 6px;
   --box-border-radius-gentle:10px;
   --box-border-radius-moderate: 14px;
-
-  /* Table */
-  --table-header-height: 4rem;
-  --table-cell-height: 3.6rem;
-  --table-border-width: 1px;
+  --box-border-width-md: 0.2rem;
 
   /* Transition scale factors */
   --transform-hover-scaling: 1.03;
@@ -291,7 +276,7 @@ html {
   --transition-active-time-scaling: var(--transition-hover-time-scaling);
   --transition-color-time: 0.4s;
 
-  /* Global box-shadow property  */
+  /* Container box-shadow property  */
   --default-box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -363,7 +348,6 @@ a {
 
 #main-page-title {
   font-size: var(--font-size-h1);
-  line-height: var(--line-height-heading);
   font-weight: var(--font-weight-bold);
   text-align: center;
 }
@@ -534,7 +518,7 @@ a {
 }
 
 .input-box label {
-  font-size: var(--font-size-h2);
+  font-size: var(--font-size-h3);
 }
 
 #course-configurator-input-box-container {
@@ -552,7 +536,7 @@ a {
 .input-box select {
   padding: var(--space-xs) var(--space-sm);
   font-size: var(--font-size-btn);
-  border-width: 0.2rem;
+  border-width: var(--box-border-width-md);;
   border-style: solid;
   border-color: var(--border-color);
   border-radius: var(--box-border-radius-softened);
@@ -600,7 +584,7 @@ a {
 }
 
 #course-configurator-days-checkbox-title {
-  font-size: var(--font-size-h2);
+  font-size: var(--font-size-h3);
   font-weight: var(--font-weight-bold);
 }
 
@@ -611,7 +595,7 @@ a {
 }
 
 #course-configurator-days-checkbox-options-container label {
-  font-size: var(--font-size-h4);
+  font-size: var(--font-size-h5);
 }
 
 #course-configurator-days-checkbox-options-container input[type="checkbox"] {
@@ -647,11 +631,15 @@ a {
   gap: var(--space-sm);
 }
 
+#course-configurator-color-picker-container label {
+  font-size: var(--font-size-h5);
+}
+
 #color-picker-selector {
   width: 8rem;
   height: 3.6rem;
   cursor: pointer;
-  border-width: 0.2rem;
+  border-width: var(--box-border-width-md);;
   border-style: solid;
   border-color: var(--border-color);
   border-radius: var(--btn-border-radius);
@@ -682,7 +670,6 @@ a {
   flex-direction: column;
   gap: var(--space-sm);
 }
-
 
 .schedule-configurator-toggle-container {
   display: flex;
@@ -716,7 +703,6 @@ a {
   justify-content: center;
   align-items: center;
   width: 100%;
-  font-size: var(--font-size-base);
   gap: var(--space-md);
   background-color: var(--secondary-color);
   border-radius: var(--box-border-radius-gentle);
@@ -733,14 +719,23 @@ a {
   gap: var(--space-xs);
 }
 
+.schedule-modifier-item h2 {
+  font-size: var(--font-size-h3);
+}
+
+.schedule-modifier-item label {
+  font-size: var(--font-size-h4);
+  font-weight: var(--font-weight-bold);
+}
+
 /* Schedule Table Section Styles  */
 #schedule-grid {
   display: grid;
-  grid-template-columns: 8rem repeat(7, minmax(10rem, 1fr));
+  grid-template-columns: 8rem repeat(7, minmax(11rem, 1fr));
   grid-auto-rows: minmax(4rem, auto);
   overflow-x: auto;
   border-style: solid;
-  border-width: 0.2rem;
+  border-width: var(--box-border-width-md);;
   border-color: var(--border-color);
   border-radius: var(--box-border-radius-moderate);
   box-shadow: var(--default-box-shadow);
@@ -750,10 +745,15 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  border-style: solid;
-  border-width: 0.2rem;
-  border-color: var(--border-color);
   text-align: center;
+  flex-wrap: wrap;
+  border-style: solid;
+  border-width: var(--box-border-width-md);;
+  border-color: var(--border-color);
+  white-space: normal;
+  overflow-wrap:break-word;
+  font-size: var(--font-size-small);
+  font-weight: var(--font-weight-medium);
   transition:
     transform var(--transition-hover-time-scaling) ease;
 }
@@ -762,32 +762,27 @@ a {
   transform: scale(var(--transform-hover-scaling));
 }
 
-.schedule-cell-global:active {
-  transform: scale(var(--transform-active-scaling));
-}
-
 .schedule-head, .schedule-hour {
   font-weight: var(--font-weight-bold);
+  font-size: var(--font-size-h4);
   position: sticky;
 }
 
 .schedule-head {
-  font-size: var(--font-size-h4);
   background-color: var(--secondary-color-shade);
-  padding: var(--space-sm);
+  padding: var(--space-xs);
   top: 0;
   z-index: 2;
 }
 
 .schedule-hour {
   background-color: var(--secondary-color-tint);
-  padding: var(--space-xxs);
   left: 0;
   z-index: 3;
 }
 
-.schedule-cell {
-  padding: var(--space-sm);
+.schedule-cell:active {
+  transform: scale(var(--transform-active-scaling));
 }
 
 /* Footer Elements Styles */
@@ -831,6 +826,13 @@ footer a:active {
 
 .hidden {
   display: none !important;
+}
+
+@media (max-width: 48rem) {
+  .schedule-cell-global {
+    font-size: 1.2rem;
+    padding: var(--space-xxs);
+  }
 }
 
 /* Media Queries */
